POWR-1273 update a couple of admin views and portland.module

--- a/web/sites/default/config/views.view.content.yml
+++ b/web/sites/default/config/views.view.content.yml
@@ -489,8 +489,8 @@ display:
           relationship: group_content
           group_type: group
           admin_label: ''
-          label: ''
-          exclude: true
+          label: Parent
+          exclude: false
           alter:
             alter_text: false
             text: ''
