--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -6458,7 +6458,7 @@ display:
             operator_id: label_op
             label: 'Parent group title contains'
             description: ''
-            use_operator: false
+            use_operator: true
             operator: label_op
             identifier: label
             required: false
@@ -6469,6 +6469,10 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
+              code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
