POWR-1181 Group editor role and permissions refactor

--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -12,65 +12,27 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  0: 'view group'
-  1: 'leave group'
-  2: 'access group_node overview'
-  3: 'create group_node:city_service entity'
-  4: 'delete own group_node:city_service entity'
-  5: 'update any group_node:city_service entity'
-  6: 'update own group_node:city_service entity'
-  7: 'view group_node:city_service entity'
-  8: 'view unpublished group_node:city_service entity'
-  9: 'delete own group_node:news entity'
-  10: 'update any group_node:news entity'
-  11: 'update own group_node:news entity'
-  12: 'view group_node:news entity'
-  13: 'view unpublished group_node:news entity'
-  20: 'delete own group_node:event entity'
-  21: 'update any group_node:event entity'
-  22: 'update own group_node:event entity'
-  23: 'view group_node:event entity'
-  24: 'view unpublished group_node:event entity'
-  25: 'create group_media:document entity'
-  26: 'delete own group_media:document entity'
-  27: 'update any group_media:document entity'
-  28: 'update own group_media:document entity'
-  29: 'view group_media:document entity'
-  30: 'view unpublished group_media:document entity'
-  31: 'create group_media:image entity'
-  32: 'delete own group_media:image entity'
-  33: 'update any group_media:image entity'
-  34: 'update own group_media:image entity'
-  35: 'view group_media:image entity'
-  36: 'view unpublished group_media:image entity'
-  37: 'create group_media:video entity'
-  38: 'delete own group_media:video entity'
-  39: 'update any group_media:video entity'
-  40: 'update own group_media:video entity'
-  41: 'view group_media:video entity'
-  42: 'view unpublished group_media:video entity'
-  43: 'access group_media overview'
-  44: 'create group_node:notification entity'
-  45: 'delete own group_node:notification entity'
-  46: 'update any group_node:notification entity'
-  47: 'update own group_node:notification entity'
-  48: 'view group_node:notification entity'
-  49: 'view unpublished group_node:notification entity'
-  50: 'create group_media:audio entity'
-  51: 'delete own group_media:audio entity'
-  52: 'update any group_media:audio entity'
-  53: 'update own group_media:audio entity'
-  54: 'view group_media:audio entity'
-  55: 'view unpublished group_media:audio entity'
-  56: 'create group_node:page entity'
-  57: 'delete own group_node:page entity'
-  58: 'update any group_node:page entity'
-  59: 'update own group_node:page entity'
-  60: 'view group_node:page entity'
-  61: 'view unpublished group_node:page entity'
-  62: 'create group_node:event entity'
-  63: 'create group_node:news entity'
-  92: 'update any group_node:development_permit entity'
-  93: 'update own group_node:development_permit entity'
-  94: 'view group_node:development_permit entity'
-  95: 'view unpublished group_node:development_permit entity'
+  - 'access group_media overview'
+  - 'access group_node overview'
+  - 'leave group'
+  - 'view group'
+  - 'view group_media:audio entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
+  - 'view group_node:city_service entity'
+  - 'view group_node:development_permit entity'
+  - 'view group_node:event entity'
+  - 'view group_node:news entity'
+  - 'view group_node:notification entity'
+  - 'view group_node:page entity'
+  - 'view unpublished group_media:audio entity'
+  - 'view unpublished group_media:document entity'
+  - 'view unpublished group_media:image entity'
+  - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:city_service entity'
+  - 'view unpublished group_node:development_permit entity'
+  - 'view unpublished group_node:event entity'
+  - 'view unpublished group_node:news entity'
+  - 'view unpublished group_node:notification entity'
+  - 'view unpublished group_node:page entity'
