adding sections migrations yaml file

--- a/web/modules/custom/portland_migrations/migrations/city_code_sections.yml
+++ b/web/modules/custom/portland_migrations/migrations/city_code_sections.yml
@@ -3,7 +3,7 @@ label: 'City code section import'
 migration_group: city_code
 source:
   plugin: csv
-  path: modules/custom/portland_migrations/sources/city_code_section.csv
+  path: modules/custom/portland_migrations/sources/city_code_sections.csv
   header_row_count: 1
   keys:
     - id
@@ -22,7 +22,7 @@ process:
     plugin: migration_lookup
     migration: city_code_chapters
     no_stub: true
-    source: chapter
+    source: chapter_id
 destination:
   plugin: 'entity:node'
-  default_bundle: charter_sections
+  default_bundle: code_section
