POWR-1273 add a new notifications block that works for news and events without group paths

--- a/web/sites/default/config/block.block.views_block__notifications_on_content_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__notifications_on_content_block_1.yml
@@ -1,26 +1,25 @@
-uuid: 43c0303a-0112-4cd4-bd68-a8e1b6e5909c
+uuid: 9af0becd-bdea-48ed-b4d8-007acae2255a
 langcode: en
 status: true
 dependencies:
   config:
-    - views.view.related
+    - views.view.notifications_on_content
   module:
     - ctools
-    - system
     - views
   theme:
     - cloudy
-id: cloudy_views_block__related_block_1
+id: views_block__notifications_on_content_block_1
 theme: cloudy
 region: content
-weight: 6
+weight: -14
 provider: null
-plugin: 'views_block:related-block_1'
+plugin: 'views_block:notifications_on_content-block_1'
 settings:
-  id: 'views_block:related-block_1'
+  id: 'views_block:notifications_on_content-block_1'
   label: ''
   provider: views
-  label_display: visible
+  label_display: '0'
   views_label: ''
   items_per_page: none
   context_mapping: {  }
@@ -28,16 +27,8 @@ visibility:
   'entity_bundle:node':
     id: 'entity_bundle:node'
     bundles:
-      city_service: city_service
       event: event
       news: news
-      page: page
-      service_location: service_location
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
-  request_path:
-    id: request_path
-    pages: '/node/*/*'
-    negate: true
-    context_mapping: {  }
