--- a/web/sites/default/config/core.entity_view_display.node.event.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.related.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
     - field.field.node.event.field_featured_media
+    - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
     - field.field.node.event.field_location
     - field.field.node.event.field_related_content
@@ -53,16 +54,16 @@ third_party_settings:
         - node_title
         - group_datetime
         - field_start_date
-        - field_all_day
-        - field_end_date
         - group_date_and_time
-        - field_start_time
+        - field_end_date
+        - field_all_day
         - group_start_to_end_time
+        - field_start_time
         - field_end_time
     fields:
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 0
         label: hidden
         formatter: default
         settings:
@@ -118,7 +119,7 @@ third_party_settings:
         - group_date_and_time
         - group_start_to_end_time
       parent_name: ''
-      weight: 2
+      weight: 1
       format_type: html_element
       format_settings:
         element: div
@@ -334,3 +335,4 @@ hidden:
   field_summary: true
   group_content: true
   links: true
+  posted_in_entity_view_1: true
