--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
     - field.field.node.news.field_featured_media
+    - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_location
     - field.field.node.news.field_news_type
@@ -56,7 +57,7 @@ third_party_settings:
     fields:
       'bundle_field:node':
         plugin_id: 'bundle_field:node'
-        weight: 1
+        weight: 0
         label: hidden
         formatter: default
         ft:
@@ -88,7 +89,7 @@ third_party_settings:
             fi-def-at: false
       node_title:
         plugin_id: node_title
-        weight: 2
+        weight: 1
         label: hidden
         formatter: default
         settings:
@@ -106,7 +107,7 @@ third_party_settings:
       children:
         - field_published_on
       parent_name: ''
-      weight: 3
+      weight: 2
       format_type: html_element
       format_settings:
         id: ''
@@ -163,7 +164,7 @@ content:
             fi-def-at: false
   field_summary:
     type: string
-    weight: 4
+    weight: 3
     region: second
     label: hidden
     settings:
@@ -192,3 +193,4 @@ hidden:
   field_topics: true
   group_content: true
   links: true
+  posted_in_entity_view_1: true
