--- a/web/sites/default/config/pathauto.pattern.group_events.yml
+++ b/web/sites/default/config/pathauto.pattern.group_events.yml
@@ -7,16 +7,16 @@ dependencies:
 id: group_events
 label: 'Group events'
 type: 'canonical_entities:node'
-pattern: '[node:group:field_shortname_or_acronym]/events/[node:field_start_date:date:html_year]/[node:field_start_date:date:html_month]/[node:title]'
+pattern: 'events/[node:field_start_date:date:html_year]/[node:field_start_date:date:numeric_month]/[node:field_start_date:date:numeric_day]/[node:title]'
 selection_criteria:
-  dca26f26-1094-48ec-a413-fe644ea5c49c:
+  23e1a5ec-ee51-4767-8588-22765f20c1bc:
     id: node_type
     bundles:
       event: event
     negate: false
     context_mapping:
       node: node
-    uuid: dca26f26-1094-48ec-a413-fe644ea5c49c
+    uuid: 23e1a5ec-ee51-4767-8588-22765f20c1bc
 selection_logic: and
 weight: -12
 relationships: {  }
