--- a/web/sites/default/config/pathauto.pattern.group_news.yml
+++ b/web/sites/default/config/pathauto.pattern.group_news.yml
@@ -7,16 +7,16 @@ dependencies:
 id: group_news
 label: 'Group news'
 type: 'canonical_entities:node'
-pattern: '[node:group:field_shortname_or_acronym]/news/[node:field_published_on:date:html_month]/[node:title]'
+pattern: 'news/[node:field_published_on:date:html_year]/[node:field_published_on:date:numeric_month]/[node:field_published_on:date:numeric_day]/[node:title]'
 selection_criteria:
-  37664b5e-d5d0-4582-bf71-dcd101e5b447:
+  2e57a953-877d-4863-8062-cecd9c0fab96:
     id: node_type
     bundles:
       news: news
     negate: false
     context_mapping:
       node: node
-    uuid: 37664b5e-d5d0-4582-bf71-dcd101e5b447
+    uuid: 2e57a953-877d-4863-8062-cecd9c0fab96
 selection_logic: and
 weight: -13
 relationships: {  }
