--- a/web/sites/default/config/block.block.views_block__group_notifications_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_notifications_block_1.yml
@@ -10,8 +10,8 @@ dependencies:
     - cloudy
 id: views_block__group_notifications_block_1
 theme: cloudy
-region: pre_content
-weight: -14
+region: content
+weight: -15
 provider: null
 plugin: 'views_block:group_notifications-block_1'
 settings:
