--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -47,11 +47,12 @@ third_party_settings:
         - field_end_date
         - field_location
         - group_date_and_time
-        - field_summary
+        - posted_in_entity_view_1
         - group_start_to_end_time
         - field_all_day
-        - field_body_content
+        - field_summary
         - field_start_time
+        - field_body_content
         - field_end_time
   field_group:
     group_date_and_time:
@@ -154,7 +155,7 @@ content:
             fi-def-at: false
   field_body_content:
     type: text_default
-    weight: 3
+    weight: 4
     region: content
     label: hidden
     settings: {  }
@@ -231,14 +232,6 @@ content:
             fi: false
             fi-def-at: false
     type: time_formatter
-    region: content
-  field_group:
-    weight: 6
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
     region: content
   field_location:
     weight: 1
@@ -331,7 +324,7 @@ content:
     type: time_formatter
     region: content
   field_summary:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
@@ -366,10 +359,16 @@ content:
             fi-def-at: false
     type: string
     region: content
+  posted_in_entity_view_1:
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_event_location: true
   field_featured_media: true
+  field_group: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
