--- a/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
     - field.field.node.event.field_featured_media
+    - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
     - field.field.node.event.field_location
     - field.field.node.event.field_related_content
@@ -47,18 +48,18 @@ third_party_settings:
       second:
         - node_title
         - group_datetime
-        - group_event_date
-        - field_all_day
-        - group_event_time
         - field_summary
-        - field_start_time
+        - group_event_date
+        - group_event_time
+        - field_all_day
         - field_start_date
-        - field_end_time
+        - field_start_time
         - field_end_date
+        - field_end_time
     fields:
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 0
         label: hidden
         formatter: default
         settings:
@@ -119,7 +120,7 @@ third_party_settings:
         - group_event_date
         - group_event_time
       parent_name: ''
-      weight: 2
+      weight: 1
       format_type: html_element
       format_settings:
         element: div
@@ -323,7 +324,7 @@ content:
             fi-def-at: false
   field_summary:
     type: string
-    weight: 5
+    weight: 2
     region: second
     label: hidden
     settings:
@@ -342,3 +343,4 @@ hidden:
   field_search_keywords: true
   group_content: true
   links: true
+  posted_in_entity_view_1: true
