--- a/web/sites/default/config/core.entity_view_display.node.news.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.related.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
     - field.field.node.news.field_featured_media
+    - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_location
     - field.field.node.news.field_news_type
@@ -141,3 +142,4 @@ hidden:
   field_topics: true
   group_content: true
   links: true
+  posted_in_entity_view_1: true
