--- a/web/sites/default/config/core.entity_view_display.node.notification.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.featured.yml
@@ -40,4 +40,6 @@ hidden:
   field_notification_severity: true
   field_reviewer: true
   field_summary: true
+  group_content: true
   links: true
+  posted_in_entity_view_1: true
