--- a/web/sites/default/config/core.entity_view_display.node.event.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.featured.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
     - field.field.node.event.field_featured_media
+    - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
     - field.field.node.event.field_location
     - field.field.node.event.field_related_content
@@ -367,6 +368,11 @@ content:
             fi-def-at: false
     type: string
     region: first
+  posted_in_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
 hidden:
   content_moderation_control: true
   field_group: true
