POWR-1308 added ckeditor_config module, added ck config to not insert nbsp, updated html filter xpath query

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "drupal/anonymous_login": "^1.1",
         "drupal/bootstrap_datepicker": "^1.0@beta",
         "drupal/chosen": "^2.5",
+        "drupal/ckeditor_config": "^2.0",
         "drupal/clamav": "^1.0",
         "drupal/components": "^1.0",
         "drupal/conditional_fields": "^1.0@alpha",
