--- a/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
@@ -57,6 +57,8 @@ settings:
       styles: "a.btn-cta|Call to action button\r\na.btn-cta-outline|Outline button\r\n"
     language:
       language_list: un
+    customconfig:
+      ckeditor_custom_config: 'fillEmptyBlocks = false'
     linkit:
       linkit_profile: powr
 image_upload:
