--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -1,44 +1,97 @@
+action: 8.5.6
+address: 1.3.0
+address_map_link: 1.0.0
 admin_toolbar: 0.0.0
 admin_toolbar_tools: 0.0.0
 adminimal_admin_toolbar: 0.0.0
+allowed_formats: 1.1.0
+anonymous_login: 1.1.0
+automated_cron: 0.0.0
 block: 0.0.0
 block_content: 0.0.0
+bootstrap_datepicker: 1.0.0-beta2
+bootstrap_datepicker_exposed_filter: 1.x
+bootstrap_library: 1.11.0
 breakpoint: 0.0.0
+bulk_update_fields: 1.0.0-alpha1
+chosen: 2.5.0
+chosen_field: 2.5.0
+chosen_lib: 2.5.0
 ckeditor: 0.0.0
+ckeditor_config: 2.0.0
+clamav: 1.0.0
+cleave: 0.1.0
+comment: 8.5.6
 components: 0.0.0
+conditional_fields: 1.0.0-alpha4
 config: 0.0.0
+config_filter: 1.3.0
+config_split: 1.4.0
 consumers: 0.0.0
 contact: 0.0.0
 contact_storage: 0.0.0
+content_lock_timeout: 1.0.0-alpha8
 content_moderation: 0.0.0
 contextual: 0.0.0
+copyright_block: 1.0.0-rc2
 crop: 0.0.0
+csv_serialization: 1.4.0
 ctools: 0.0.0
 ctools_block: 0.0.0
+custom_add_another: 1.0.0-beta1
 datetime: 0.0.0
+datetime_range: 0.0.0
 dblog: 0.0.0
 diff: 0.0.0
+draggableviews: 1.2.0
 dropzonejs: 0.0.0
+ds: 0.0.0
+ds_extras: 0.0.0
+easy_breadcrumb: 1.8.0
 editor: 0.0.0
 embed: 0.0.0
 entity_block: 0.0.0
 entity_browser: 0.0.0
+entity_browser_entity_form: 0.0.0
 entity_embed: 0.0.0
 entity_reference: 0.0.0
 entity_reference_revisions: 0.0.0
+eva: 1.3.0
+extlink: 1.1.0
+facets: 0.0.0
 field: 0.0.0
+field_defaults: 1.0.0-rc2
+field_group: 0.0.0
+field_permissions: 1.0.0-rc1
 field_ui: 0.0.0
 file: 0.0.0
 filter: 0.0.0
+fixed_block_content: 1.0.0
+focal_point: 1.0.0-beta6
+fontawesome: 0.0.0
+geocoder: 2.2.0
+geocoder_address: 2.2.0
+geocoder_field: 2.2.0
+geocoder_geofield: 2.2.0
+geofield: 1.3.0
 gnode: 0.0.0
+google_analytics: 0.0.0
 group: 0.0.0
+groupmedia: 2.0.0-alpha2
+hal: 8.6.4
 help: 0.0.0
 history: 0.0.0
+hsts: 1.0.0
+htmlpurifier: 1.0.0-rc1
 image: 0.0.0
 image_widget_crop: 0.0.0
 inline_entity_form: 0.0.0
+inline_form_errors: 0.0.0
 jsonapi: 0.0.0
+key: 1.8.0
+kint: 1.2.0
 layout_discovery: 0.0.0
+lightning: 3.2.0
 lightning_api: 0.0.0
 lightning_contact_form: 0.0.0
 lightning_core: 3.6.0
@@ -57,155 +110,103 @@ lightning_scheduler: 0.0.0
 lightning_search: 0.0.0
 lightning_workflow: 3.3.0
 link: 0.0.0
+link_class: 1.3.0
+linkit: 4.3.0
+mailsystem: 4.1.0
+masquerade: 0.0.0
+maxlength: 1.0.0-beta2
 media: 0.0.0
 media_entity_instagram: 0.0.0
 media_entity_twitter: 0.0.0
+media_library: 8.6.1
+menu_breadcrumb: 1.8.0
+menu_link_content: 0.0.0
 menu_ui: 0.0.0
 metatag: 0.0.0
+metatag_open_graph: 0.0.0
+metatag_twitter_cards: 0.0.0
+migrate: 8.6.15
+migrate_plus: 4.2.0
+migrate_source_csv: 2.2.0
+migrate_tools: 4.1.0
+mimemail: 1.0.0-alpha2
 node: 0.0.0
 openapi: 0.0.0
 openapi_ui: 0.0.0
-openapi_ui_swagger: '0'
 openapi_ui_redoc: 0.0.0
+openapi_ui_swagger: '0'
+openid_connect: 1.0.0-beta5
 options: 0.0.0
 page_cache: 0.0.0
+page_manager: 0.0.0
+page_manager_ui: 0.0.0
 panelizer: 0.0.0
 panelizer_quickedit: 0.0.0
 panels: 0.0.0
 panels_ipe: 0.0.0
+pantheon_advanced_page_cache: 1.0.0
+paragraphs: 0.0.0
 path: 0.0.0
+pathauto: 0.0.0
+portland: 0.0.0
+portland_legacy_redirects: 0.1.0
+portland_media_embed_helper: 0.1.0
+portland_migrations: 0.0.0
+portland_moderation_helper: 0.1.0
+portland_revision_helper: 0.1.0
+portland_taxonomy_create: 0.1.0
+portland_views_helper: 0.1.0
 quickedit: 0.0.0
+rabbit_hole: 1.0.0-beta4
 rdf: 0.0.0
+redirect: 1.1.0
+redirect_404: 1.1.0
+remove_http_headers: 1.0.0-alpha3
+responsive_image: 0.0.0
+rest: 8.6.2
+rh_node: 1.0.0-beta4
+rules: 3.0.0-alpha4
 schemata: 0.0.0
 schemata_json_schema: 0.0.0
 search_api: 0.0.0
+search_api_autocomplete: 1.2.0
 search_api_db: 0.0.0
+search_api_logger: 1.3.0
+search_api_page: 1.0.0-alpha12
+search_api_pantheon: 1.0.0-alpha3
+search_api_solr: 0.0.0
+search_api_spellcheck: 0.0.0
+seckit: 1.1.0
+sendgrid_integration: 1.2.0
 serialization: 0.0.0
 shortcut: 0.0.0
 simple_oauth: 0.0.0
 simple_oauth_extras: 0.0.0
+subpathauto: 1.0.0-beta1
+switch_page_theme: 1.0.0
 system: 0.0.0
 taxonomy: 0.0.0
+telephone: 8.5.0
+telephone_validation: 2.1.0
 text: 0.0.0
+textarea_widget_for_text: 1.1.0
+time_field: 1.1.0
 token: 0.0.0
 toolbar: 0.0.0
+transliterate_filenames: 1.2.0
+twig_tweak: 2.0.0
+typed_data: 1.0.0-alpha3
+unified_twig_ext: 0.0.0
 user: 0.0.0
 video_embed_field: 0.0.0
 video_embed_media: 0.0.0
+views: 0.0.0
+views_bulk_operations: 2.2.0
+views_data_export: 1.0.0-beta1
 views_infinite_scroll: 0.0.0
 views_ui: 0.0.0
 viewsreference: 0.0.0
-workflows: 0.0.0
-menu_link_content: 0.0.0
-pathauto: 0.0.0
-views: 0.0.0
-paragraphs: 0.0.0
-lightning: 3.2.0
-telephone: 8.5.0
-address: 1.3.0
-eva: 1.3.0
-redirect: 1.1.0
-redirect_404: 1.1.0
-textarea_widget_for_text: 1.1.0
-views_bulk_operations: 2.2.0
-page_manager: 0.0.0
-page_manager_ui: 0.0.0
-subpathauto: 1.0.0-beta1
-chosen_lib: 2.5.0
-chosen: 2.5.0
-chosen_field: 2.5.0
-bootstrap_library: 1.11.0
-portland: 0.0.0
-twig_tweak: 2.0.0
-link_class: 1.3.0
-masquerade: 0.0.0
-unified_twig_ext: 0.0.0
-copyright_block: 1.0.0-rc2
-facets: 0.0.0
-custom_add_another: 1.0.0-beta1
-datetime_range: 0.0.0
-inline_form_errors: 0.0.0
-entity_browser_entity_form: 0.0.0
-maxlength: 1.0.0-beta2
-telephone_validation: 2.1.0
-cleave: 0.1.0
-automated_cron: 0.0.0
-allowed_formats: 1.1.0
-time_field: 1.1.0
-conditional_fields: 1.0.0-alpha4
-fontawesome: 0.0.0
-ds: 0.0.0
-ds_extras: 0.0.0
-field_group: 0.0.0
-openid_connect: 1.0.0-beta5
-responsive_image: 0.0.0
-search_api_solr: 0.0.0
-search_api_pantheon: 1.0.0-alpha3
-comment: 8.5.6
-search_api_page: 1.0.0-alpha12
-extlink: 1.1.0
-clamav: 1.0.0
-portland_legacy_redirects: 0.1.0
-linkit: 4.3.0
-action: 8.5.6
-bulk_update_fields: 1.0.0-alpha1
-hsts: 1.0.0
-anonymous_login: 1.1.0
-rabbit_hole: 1.0.0-beta4
-rh_node: 1.0.0-beta4
-google_analytics: 0.0.0
-config_filter: 1.3.0
-config_split: 1.4.0
-easy_breadcrumb: 1.8.0
-media_library: 8.6.1
-field_permissions: 1.0.0-rc1
-metatag_open_graph: 0.0.0
-metatag_twitter_cards: 0.0.0
-portland_revision_helper: 0.1.0
 webform: 5.0.0-rc22
 webform_ui: 5.0.0-rc22
-pantheon_advanced_page_cache: 1.0.0
-htmlpurifier: 1.0.0-rc1
-rest: 8.6.2
-csv_serialization: 1.4.0
-views_data_export: 1.0.0-beta1
-switch_page_theme: 1.0.0
-groupmedia: 2.0.0-alpha2
-field_defaults: 1.0.0-rc2
-hal: 8.6.4
-fixed_block_content: 1.0.0
-key: 1.8.0
-transliterate_filenames: 1.2.0
-portland_media_embed_helper: 0.1.0
-menu_breadcrumb: 1.8.0
-mailsystem: 4.1.0
-sendgrid_integration: 1.2.0
-seckit: 1.1.0
-remove_http_headers: 1.0.0-alpha3
-kint: 1.2.0
-content_lock_timeout: 1.0.0-alpha8
-focal_point: 1.0.0-beta6
-draggableviews: 1.2.0
-bootstrap_datepicker: 1.0.0-beta2
-portland_views_helper: 0.1.0
-bootstrap_datepicker_exposed_filter: 1.x
-migrate: 8.6.15
-migrate_plus: 4.2.0
-migrate_tools: 4.1.0
-migrate_source_csv: 2.2.0
-portland_migrations: 0.0.0
-search_api_logger: 1.3.0
-search_api_spellcheck: 0.0.0
-search_api_autocomplete: 1.2.0
-portland_taxonomy_create: 0.1.0
-typed_data: 1.0.0-alpha3
-rules: 3.0.0-alpha4
-mimemail: 1.0.0-alpha2
-portland_moderation_helper: 0.1.0
-geofield: 1.3.0
-geocoder: 2.2.0
-geocoder_field: 2.2.0
-geocoder_address: 2.2.0
-geocoder_geofield: 2.2.0
-address_map_link: 1.0.0
+workflows: 0.0.0
 yearonly: 1.3.0
