--- a/web/sites/default/config/views.view.group_notifications.yml
+++ b/web/sites/default/config/views.view.group_notifications.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.featured
-    - core.entity_view_mode.node.teaser
   module:
     - datetime
     - group
@@ -51,26 +50,9 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: full
+        type: none
         options:
-          items_per_page: 20
           offset: 0
-          id: 0
-          total_pages: null
-          tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
-            first: '« First'
-            last: 'Last »'
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          quantity: 9
       style:
         type: default
         options:
@@ -81,7 +63,7 @@ display:
         type: 'entity:node'
         options:
           relationship: none
-          view_mode: teaser
+          view_mode: featured
       fields:
         title:
           id: title
@@ -398,7 +380,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
@@ -410,76 +391,20 @@ display:
     display_options:
       display_extenders: {  }
       block_description: 'Group: Notifications'
-      pager:
-        type: none
-        options:
-          offset: 0
       defaults:
-        pager: false
+        pager: true
         link_display: false
         link_url: false
-        use_more: false
-        use_more_always: false
-        use_more_text: false
-        style: false
-        row: false
+        use_more: true
+        use_more_always: true
+        use_more_text: true
+        style: true
+        row: true
         filters: false
         filter_groups: false
       link_display: page_1
       link_url: ''
-      use_more: false
-      use_more_always: false
-      use_more_text: 'More news and notices'
-      style:
-        type: default
-        options:
-          row_class: ''
-          default_row_class: false
-          uses_fields: false
-      row:
-        type: 'entity:node'
-        options:
-          relationship: none
-          view_mode: featured
-      filters:
-        status:
-          id: status
-          table: node_field_data
-          field: status
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
+      filters: {  }
       filter_groups:
         operator: AND
         groups:
