--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,7 @@
         "drupal/groupmedia": "^2.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
+        "drupal/leaflet": "^1.18",
         "drupal/lightning_layout": "~2.0.0",
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
