POWR-1221 clean up visual layout of meeting and documents

--- a/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
@@ -20,7 +20,7 @@ mode: default
 content:
   field_agenda_item_number:
     weight: 1
-    label: visually_hidden
+    label: inline
     settings:
       thousand_separator: ''
       prefix_suffix: true
