--- a/web/sites/default/config/core.entity_view_display.paragraph.council_communication_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.council_communication_item.default.yml
@@ -15,7 +15,7 @@ mode: default
 content:
   field_agenda_item_number:
     weight: 0
-    label: visually_hidden
+    label: inline
     settings:
       thousand_separator: ''
       prefix_suffix: false
