--- a/web/sites/default/config/field.field.paragraph.council_agenda_item.field_time.yml
+++ b/web/sites/default/config/field.field.paragraph.council_agenda_item.field_time.yml
@@ -16,8 +16,8 @@ id: paragraph.council_agenda_item.field_time
 field_name: field_time
 entity_type: paragraph
 bundle: council_agenda_item
-label: 'Time certain (optional)'
-description: ''
+label: 'Time certain'
+description: 'Optional '
 required: false
 translatable: false
 default_value: {  }
