--- a/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
@@ -30,6 +30,11 @@ targetEntityType: node
 bundle: council_document
 mode: default
 content:
+  content_moderation_control:
+    weight: -20
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_body_content:
     weight: 4
     label: hidden
@@ -39,7 +44,7 @@ content:
     region: content
   field_bureau:
     weight: 3
-    label: above
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
@@ -56,18 +61,32 @@ content:
     region: content
   field_council_document_status:
     weight: 0
-    label: hidden
+    label: inline
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_council_document_type:
     weight: 1
-    label: hidden
+    label: inline
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_documents_and_exhibits:
@@ -92,7 +111,7 @@ content:
     region: content
   field_introduced_by:
     weight: 2
-    label: above
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
