--- a/web/sites/default/config/field.field.paragraph.council_communication_item.field_agenda_item_number.yml
+++ b/web/sites/default/config/field.field.paragraph.council_communication_item.field_agenda_item_number.yml
@@ -15,8 +15,8 @@ id: paragraph.council_communication_item.field_agenda_item_number
 field_name: field_agenda_item_number
 entity_type: paragraph
 bundle: council_communication_item
-label: 'Agenda item number'
-description: ''
+label: 'Agenda item'
+description: 'Enter the number for the agenda item'
 required: false
 translatable: true
 default_value: {  }
