--- a/web/sites/default/config/views.view.council_meetings.yml
+++ b/web/sites/default/config/views.view.council_meetings.yml
@@ -74,11 +74,7 @@ display:
       style:
         type: default
         options:
-          grouping:
-            -
-              field: field_start_date
-              rendered: true
-              rendered_strip: false
+          grouping: {  }
           row_class: ''
           default_row_class: true
       row:
@@ -166,7 +162,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time"><i class="fas fa-clock"></i> {{ field_start_time }}</p>'
+            text: '<p class="event--time">{{ field_start_time }}</p>'
             make_link: false
             path: ''
             absolute: false
@@ -536,19 +532,172 @@ display:
             label: ''
           granularity: second
           plugin_id: datetime
-      title: 'Upcoming council meetings'
+      title: 'Council meetings'
       header: {  }
       footer: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: '<p>The council clerk will add council agendas as they become available.</p>'
+            format: basic_style_editor
+          plugin_id: text
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      link_url: ''
+      link_display: page_2
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_council_meeting_status'
+        - 'config:field.storage.node.field_council_meeting_type'
+        - 'config:field.storage.node.field_start_date'
+        - 'config:field.storage.node.field_start_time'
+        - extensions
+  attachment_1:
+    display_plugin: attachment
+    id: attachment_1
+    display_title: Attachment
+    position: 3
+    display_options:
+      display_extenders: {  }
+      title: 'Recent council meetings'
+      defaults:
+        title: false
+        filters: false
+        filter_groups: false
+        sorts: false
+        use_more: false
+        use_more_always: false
+        use_more_text: false
+        header: false
+      filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+          group: 1
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          value:
+            council_meeting: council_meeting
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+        field_start_date_value:
+          id: field_start_date_value
+          table: node__field_start_date
+          field: field_start_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '<'
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: offset
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      sorts:
+        field_start_date_value:
+          id: field_start_date_value
+          table: node__field_start_date
+          field: field_start_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          plugin_id: datetime
+      displays:
+        page_1: page_1
+      pager:
+        type: some
+        options:
+          items_per_page: 5
+          offset: 0
+      use_more: true
+      use_more_always: true
+      use_more_text: 'More council meetings'
+      inherit_pager: false
+      attachment_position: after
+      header:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: false
+          content:
+            value: '<h2>Recent council meetings</h2>'
+            format: simplified_editor_with_media_embed
+          plugin_id: text
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
         - 'user.node_grants:view'
         - user.permissions
       tags:
@@ -593,6 +742,7 @@ display:
         title: false
         filters: false
         filter_groups: false
+        pager: false
       filters:
         status:
           value: '1'
@@ -662,6 +812,27 @@ display:
         groups:
           1: AND
       display_description: ''
+      pager:
+        type: full
+        options:
+          items_per_page: 10
+          offset: 0
+          id: 0
+          total_pages: null
+          tags:
+            previous: ‹‹
+            next: ››
+            first: '« First'
+            last: 'Last »'
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
+          quantity: 9
     cache_metadata:
       max-age: -1
       contexts:
