POWR-1221 update path auto patterns

--- a/web/sites/default/config/pathauto.pattern.council_meetings.yml
+++ b/web/sites/default/config/pathauto.pattern.council_meetings.yml
@@ -7,16 +7,16 @@ dependencies:
 id: council_meetings
 label: 'Council meetings'
 type: 'canonical_entities:node'
-pattern: 'council/meeting/[node:field_start_date:date:html_date]/[node:field_council_meeting_type:entity]-[node:field_start_time]'
+pattern: 'council/meetings/[node:field_start_date:date:html_date]/[node:field_council_meeting_type:entity]-[node:field_start_time]'
 selection_criteria:
-  d2755dd5-912d-49ae-9504-01faf9dee706:
+  c515dac7-4b83-424e-aeef-cabd8d5c542f:
     id: node_type
     bundles:
       council_meeting: council_meeting
     negate: false
     context_mapping:
       node: node
-    uuid: d2755dd5-912d-49ae-9504-01faf9dee706
+    uuid: c515dac7-4b83-424e-aeef-cabd8d5c542f
 selection_logic: and
 weight: -5
 relationships: {  }
